--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.22.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "react-svg": "^14.0.14"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
